--- a/src/canvas-sketch-master/examples/package.json
+++ b/src/canvas-sketch-master/examples/package.json
@@ -15,7 +15,16 @@
     "canvas-sketch": "^0.5.0",
     "canvas-sketch-util": "^1.8.0",
     "convex-hull": "^1.0.3",
+    "eases": "^1.0.8",
     "gl-matrix": "^3.0.0",
-    "perspective-camera": "^2.0.1"
+    "glsl-aastep": "^1.0.1",
+    "glsl-dither": "^1.0.1",
+    "hex-rgb": "^4.1.0",
+    "lerp": "^1.0.3",
+    "perspective-camera": "^2.0.1",
+    "primitive-icosphere": "^1.0.2",
+    "primitive-quad": "^2.0.0",
+    "regl": "^1.3.11",
+    "three": "^0.107.0"
   }
 }
