--- a/src/s33d/package.json
+++ b/src/s33d/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "canvas-sketch": "^0.5.0",
     "canvas-sketch-util": "^1.8.0",
+    "glsl-dither": "^1.0.1",
+    "hex-rgb": "^4.1.0",
     "load-asset": "^1.2.0",
-    "nice-color-palettes": "^3.0.0"
+    "nice-color-palettes": "^3.0.0",
+    "perspective-camera": "^2.0.1",
+    "primitive-icosphere": "^1.0.2",
+    "regl": "^1.3.11"
   }
 }
