--- a/src/s33d/package.json
+++ b/src/s33d/package.json
@@ -13,6 +13,8 @@
     "canvas-sketch": "^0.5.0",
     "canvas-sketch-util": "^1.8.0",
     "glsl-dither": "^1.0.1",
+    "glsl-noise": "0.0.0",
+    "glslify": "^7.0.0",
     "hex-rgb": "^4.1.0",
     "load-asset": "^1.2.0",
     "nice-color-palettes": "^3.0.0",
