added script and missing dep

--- a/src/s33d/package.json
+++ b/src/s33d/package.json
@@ -4,7 +4,23 @@
   "description": "",
   "main": "black-noise.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "fur": "canvas-sketch ./fur.js --open",
+    "black-noise": "canvas-sketch ./black-noise.js --open",
+    "circles": "canvas-sketch ./circles.js --open",
+    "canvas-generative-silhouette": "canvas-sketch ./canvas-generative-silhouette.js --open",
+    "color-noise": "canvas-sketch ./color-noise.js --open",
+    "dither": "canvas-sketch ./dither.js --open",
+    "flower": "canvas-sketch ./flower.js --open",
+    "doctor-handwriting": "canvas-sketch ./doctor-handwriting.js --open",
+    "headless-gl": "canvas-sketch ./headless-gl.js --open",
+    "image-pixel-sorting": "canvas-sketch ./image-pixel-sorting.js --open",
+    "noise-text-character": "canvas-sketch ./noise-text-character.js --open",
+    "noiseShader": "canvas-sketch ./noiseShader.js --open",
+    "random-circles": "canvas-sketch ./random-circles.js --open",
+    "randomPalettes": "canvas-sketch ./randomPalettes.js --open",
+    "shader": "canvas-sketch ./shader.js --open",
+    "webgl": "canvas-sketch ./webgl.js --open"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +29,7 @@
     "canvas-sketch": "^0.5.0",
     "canvas-sketch-util": "^1.8.0",
     "glsl-dither": "^1.0.1",
+    "glsl-hsl2rgb": "^1.1.0",
     "glsl-noise": "0.0.0",
     "glslify": "^7.0.0",
     "hex-rgb": "^4.1.0",
