--- a/src/s33d/package.json
+++ b/src/s33d/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "b-spline": "^2.0.1",
     "canvas-sketch": "^0.5.0",
     "canvas-sketch-util": "^1.8.0",
     "glsl-dither": "^1.0.1",
