--- a/project/src/slides/package.json
+++ b/project/src/slides/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "canvas-sketch": "^0.6.1",
     "canvas-sketch-util": "^1.8.0",
-    "gl-matrix": "^3.1.0"
+    "gl-matrix": "^3.1.0",
+    "nice-color-palettes": "^3.0.0",
+    "three": "^0.108.0"
   }
 }
