--- a/project/src/instagram/package.json
+++ b/project/src/instagram/package.json
@@ -42,6 +42,7 @@
     "nice-color-palettes": "^3.0.0",
     "perspective-camera": "^2.0.1",
     "primitive-icosphere": "^1.0.2",
-    "regl": "^1.3.11"
+    "regl": "^1.3.11",
+    "three": "^0.108.0"
   }
 }
