--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "canvas-sketch-util": "^1.4.2",
     "convex-hull": "^1.0.3",
     "eases": "^1.0.8",
+    "express": "^4.17.1",
     "gl-matrix": "^2.8.1",
     "glsl-face-normal": "^1.0.2",
     "glsl-hsl2rgb": "^1.1.0",
@@ -20,6 +21,7 @@
     "load-asset": "^1.2.0",
     "nice-color-palettes": "^2.0.0",
     "regl": "^1.3.7",
-    "three": "^0.97.0"
+    "three": "^0.97.0",
+    "ws": "^7.2.0"
   }
 }
